# pyWES

./: .gitignore  README.md  client.py  main.py  models.py  pyproject.toml  requirements.txt  server.py  test.py  tox.ini
.github/workflows/: codeql-analysis.yml
parse/: results.py  spice3raw.py
pywes/: client.py  main.py  models.py  server.py
pywes/parse/: __init__.py  spice3raw.py
pywes/wrapper/: __init__.py  base_wrapper.py  ngspice.py  spice_wrapper.py
scripts/: note.md
test/: schem_test.net  sim_batch.out  sim_log.out  sim_server.out  test_npspice.py
wrapper/: __init__.py  ngspice.py  spice_wrapper.py
