[tool.poetry]
name = "webApp"
version = "0.1.0"
description = ""
authors = ["Patarimi <mpqqch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi-jsonrpc = "^2.2.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
typer = "^0.6.1"
h5py = "^3.7.0"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[tool.poetry.group.OpenEMS.dependencies]
py-ems = {  git = "https://github.com/matthuszagh/pyems.git" }


[tool.poetry.group.fdtd.dependencies]
fdtd = "^0.2.5"
functoolz = "^0.4"


[tool.poetry.group.functools.dependencies]
fdtd = "^0.2.5"


[tool.poetry.group.functoolz.dependencies]
fdtd = "^0.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
