[tool.poetry]
name = "pywes"
version = "0.1.0"
description = ""
authors = ["Patarimi <mpqqch@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pywes = "pywes.main:cli"

[tool.poetry.dependencies]
python = "^3.9"
fastapi-jsonrpc = "^2.2.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
typer = {extras = ["all"], version = "^0.6.1"}
h5py = "^3.7.0"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[tool.poetry.group.spice.dependencies]
PySpice = "^1.5"


[tool.poetry.group.em-fdtd.dependencies]
ngsolve = "^6.2.2204"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
